external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/integer_subst_in_dependency/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 9, column 34
  |
9 | A = { local = "a", rename-from = { "A" = 1 } }
  |                                  ^^^^^^^^^^^
invalid type: map, expected a string
